@@ -1,0 +1,108 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="generator" content="Docutils 0.3.7: http://docutils.sourceforge.net/" />
+<title>twill Extension Modules</title>
+<link rel="stylesheet" href="default.css" type="text/css" />
+</head>
+<body>
+<div class="document" id="twill-extension-modules">
+<h1 class="title">twill Extension Modules</h1>
+<div class="contents topic" id="contents">
+<p class="topic-title first"><a name="contents">Contents</a></p>
+<ul class="simple">
+<li><a class="reference" href="#check-links-a-simple-link-checker" id="id1" name="id1">check_links -- a simple link checker</a></li>
+<li><a class="reference" href="#match-parse-extensions-for-slicing-and-dicing-variables-with-regexps" id="id2" name="id2">match_parse -- extensions for slicing and dicing variables with regexps</a></li>
+<li><a class="reference" href="#mailman-sf-discard-spam-messages-from-your-sourceforge-mailing-lists" id="id3" name="id3">mailman_sf -- discard spam messages from your SourceForge mailing lists</a></li>
+</ul>
+</div>
+<p>Several different extension modules are distributed with twill, under
+'twill.extensions'.</p>
+<div class="section" id="check-links-a-simple-link-checker">
+<h1><a class="toc-backref" href="#id1" name="check-links-a-simple-link-checker">check_links -- a simple link checker</a></h1>
+<p>A simple link checker is included with twill.  To use it, do</p>
+<pre class="literal-block">
+go &lt;page&gt;
+
+extend_with check_links
+check_links
+</pre>
+<p>'check_links' will visit each link on the current page and verify that
+the HTTP status code is 200 (success).  A list of failing links will be
+printed out at the end of the function.</p>
+<p>The 'check_links' function takes an optional argument, a regexp to filter
+for links that should be checked.  By default the filter matches everything;
+if you only wanted to check links on e.g. idyll.org, you could do</p>
+<pre class="literal-block">
+go http://idyll.org/
+check_links .*\.idyll\.org
+</pre>
+<p>A few notes:</p>
+<blockquote>
+<ul class="simple">
+<li>'follow' is used to visit each link, so the referrer URL should
+be set correctly.</li>
+<li>HTTP basic authentication and cookies work as you'd expect, so you
+can set up twill with all of the permissions necessary to visit restricted
+links &amp; only then run check_links.</li>
+</ul>
+</blockquote>
+</div>
+<div class="section" id="match-parse-extensions-for-slicing-and-dicing-variables-with-regexps">
+<h1><a class="toc-backref" href="#id2" name="match-parse-extensions-for-slicing-and-dicing-variables-with-regexps">match_parse -- extensions for slicing and dicing variables with regexps</a></h1>
+<p>The 'match_parse' extension module contains a number of functions for
+dealing with multiple matches, etc.  Here's some example code:</p>
+<pre class="literal-block">
+extend_with match_parse
+go http://www.idyll.org/
+
+split &quot;org&quot;
+echo __matchlist__
+
+findall &quot;t.&quot;
+echo __matchlist__
+
+split &quot;org&quot;
+popmatch 0
+getmatch test 'm[0].split()'
+showvar test
+
+split &quot;org&quot;
+setmatch &quot;m.split()[0]&quot;
+
+popmatch 0
+echo __matchlist__
+echo __match__
+</pre>
+</div>
+<div class="section" id="mailman-sf-discard-spam-messages-from-your-sourceforge-mailing-lists">
+<h1><a class="toc-backref" href="#id3" name="mailman-sf-discard-spam-messages-from-your-sourceforge-mailing-lists">mailman_sf -- discard spam messages from your SourceForge mailing lists</a></h1>
+<p>The 'mailman_sf' extension module contains two functions, 'discard_all_messages'
+and 'exit_if_empty'.  Here's some example code:</p>
+<pre class="literal-block">
+# load in the mailman_sf extensions module
+extend_with mailman_sf
+
+# unfortunately we have to hard-code in the mailing list name for
+# the moment.  not sure how to do substitutions here.
+go https://lists.sourceforge.net/lists/admindb/pywx-announce
+
+# fill out the page with the list password.
+getpassword &quot;Enter list password: &quot;
+formvalue 1 adminpw __password__
+submit 0
+code 200
+
+# if there aren't any messages on the page, exit.
+exit_if_empty
+
+# if not empty, discard all messages &amp; submit
+discard_all_messages
+submit 0
+</pre>
+</div>
+</div>
+</body>
+</html>
