@@ -10,6 +10,15 @@
 <body>
 <div class="document" id="installing-twill">
 <h1 class="title">Installing twill</h1>
+<div class="contents topic" id="contents">
+<p class="topic-title first"><a name="contents">Contents</a></p>
+<ul class="simple">
+<li><a class="reference" href="#installing-twill-on-windows" id="id1" name="id1">Installing twill on Windows</a></li>
+<li><a class="reference" href="#installing-twill-on-mac-os-x" id="id2" name="id2">Installing twill on Mac OS X</a></li>
+<li><a class="reference" href="#troubleshooting-your-installation" id="id3" name="id3">Troubleshooting your installation</a></li>
+<li><a class="reference" href="#upgrading-twill" id="id4" name="id4">Upgrading twill</a></li>
+</ul>
+</div>
 <p>The recommended way to install twill is to use <a class="reference" href="http://peak.telecommunity.com/DevCenter/EasyInstall">easy_install</a>:</p>
 <pre class="literal-block">
 easy_install twill
@@ -29,7 +38,7 @@ http://peak.telecommunity.com/dist/ez_setup.py
 <p>and run 'python ez_setup.py'.  This will install setuptools and put
 an easy_install program in your Python scripts directory.</p>
 <div class="section" id="installing-twill-on-windows">
-<h1><a name="installing-twill-on-windows">Installing twill on Windows</a></h1>
+<h1><a class="toc-backref" href="#id1" name="installing-twill-on-windows">Installing twill on Windows</a></h1>
 <p>The most frequent problem people seem to encounter on Windows is the
 inability to run 'twill-sh'.  This happens because the Python
 installation's 'scripts' directory isn't in the path by default.
@@ -42,7 +51,7 @@ PATH C:\Python23\scripts;%PATH%
 installation.)</p>
 </div>
 <div class="section" id="installing-twill-on-mac-os-x">
-<h1><a name="installing-twill-on-mac-os-x">Installing twill on Mac OS X</a></h1>
+<h1><a class="toc-backref" href="#id2" name="installing-twill-on-mac-os-x">Installing twill on Mac OS X</a></h1>
 <p>As with Windows, the problem most frequently encountered seems to be
 that the Python 'bin' directory isn't part of your path by default.
 This means that the twill shell program, 'twill-sh', will not be found
@@ -58,7 +67,7 @@ set path=($path /System/Library/Frameworks/Python.framework/Versions/2.3/bin)
 </pre>
 </div>
 <div class="section" id="troubleshooting-your-installation">
-<h1><a name="troubleshooting-your-installation">Troubleshooting your installation</a></h1>
+<h1><a class="toc-backref" href="#id3" name="troubleshooting-your-installation">Troubleshooting your installation</a></h1>
 <p>The first and only thing you should do before asking the list (<a class="reference" href="mailto:twill&#64;lists.idyll.org">twill&#64;lists.idyll.org</a>) for help is to see if you have the twill package installed correctly:</p>
 <pre class="literal-block">
 % python
@@ -72,7 +81,7 @@ need help, or the above code doesn't work, please copy and paste the results
 of entering the above code into your e-mail to the list -- thanks!</p>
 </div>
 <div class="section" id="upgrading-twill">
-<h1><a name="upgrading-twill">Upgrading twill</a></h1>
+<h1><a class="toc-backref" href="#id4" name="upgrading-twill">Upgrading twill</a></h1>
 <p>If you don't want to download a new tar.gz file, you can use
 easy_install to upgrade twill.  To get the latest release, use</p>
 <pre class="literal-block">
